# ProgrammingPr_PR1

./: CMakeLists.txt  README.md  README.txt  UOC20241.project  UOC20241.workspace
UOCTaxation/: UOCTaxation.project
UOCTaxation/include/: api.h  date.h  error.h  landlord.h  tenant.h
UOCTaxation/src/: api.c  csv.c  date.c  landlord.c  rental_incomes.c  tenant.c
src/: main.c
test/include/: test_data.h
test/src/: test.c  test_pr1.c  test_suite.c
